--- a/courses.html
+++ b/courses.html
@@ -529,7 +529,7 @@
 			</div>
 			
 		</div>
-		<div class="col-lg-4 col-md-6 col-12 boom-mt boom-opacity search-opt" a="mba,masters in business administration,master in business administration,projects,project management" b="check-man">
+		<div class="col-lg-4 col-md-6 col-12 boom-mt boom-opacity search-opt" a="mba,masters in business administration,master in business administration,projects,project management,MBA Project Management,MBA in Project Management" b="check-man">
 			
 			<div class="mx-auto services-cards margin-b-4 margin-b-sm-5">
 				
@@ -545,7 +545,7 @@
 			
 		</div>
 
-		<div class="col-lg-4 col-md-6 col-12 boom-mt boom-opacity search-opt" a="mba,masters in business administration,master in business administration,hr,h.r.,human resources" b="check-man">
+		<div class="col-lg-4 col-md-6 col-12 boom-mt boom-opacity search-opt" a="mba,masters in business administration,master in business administration,hr,h.r.,human resources,MBA Human Resources,MBA in Human Resources" b="check-man">
 			
 			<div class="mx-auto services-cards margin-b-4 margin-b-sm-5">
 				
