--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
 		</div>
 		<div class="col-md-7 col-12">
 			<div class="home-profile-info text-justify margin-r-md-4 margin-l-md-0 margin-x-3 padding-t-md-0 padding-t-2 boom-mt">
-				<p class="boom-opacity">Our college was founded in the year 1995 on Earth, in Mumbai, India. After the unfortunate apocalypse which made Earth inhabitable, we shifted to the <i>Androemeda Galaxy</i>. </p><p class="margin-b-2 boom-opacity">Space Institute of East Androemeda, previously known as South Indian Education Society's Graduate School of Technology, is one of the best institute all over Androemeda galaxy. Keeping in mind that education is the primary need for a good society and human development, we took effort to regroup and continue providing education.</p>
+				<p class="boom-opacity">Our college was founded in the year 1995 on Earth, in Mumbai, India. After the unfortunate apocalypse which made Earth inhabitable, we shifted to the <i>Androemeda Galaxy</i>. </p><p class="margin-b-2 boom-opacity">Our Institute is one of the best institute all over Androemeda galaxy. Keeping in mind that education is the primary need for a good society and human development, we took effort to regroup and continue providing education.</p>
 				<div class="margin-r-sm-5 text-right margin-t-0"><a href="about.html" class="padding-y-1 btn btn-primary home-profile-info">More About Us!</a></div>
 			</div>
 		</div>
