--- a/about.html
+++ b/about.html
@@ -262,7 +262,7 @@
 		<div class="col-12 col-md-7 col-lg-8 padding-b-4 padding-b-md-0">
 			<div class="home-profile-info text-center text-md-left boom-mt boom-opacity about-info">
 				<p class="boom-opacity">Space Institute of East Andromeda is all about producing<i> most developed citizens</i>. And for us, it's never <i>just an Institue</i>. Each student graduating from here is with outstanding skills and knowledge!</p><p class="margin-b-2 boom-opacity">If you are aiming to be the next citizen for the galaxy, this is the perfect place. We provide advanced lab sessions that will help your chance to stand-out and get noticed thus increasing your space tech skills. Our S.I.E.A offer sustainability and reliability helping you grow more and worry less.</p>
-				<p class="margin-b-2 boom-opacity">Since its under South Indian Education Society (Navi Mumbai) and now its growing to Inter-Galaxies this year for availing quality eductaion all around. Space Institute of East Andromeda has developed exponentially to become a leading research institute of Planetray Technologies on Venus, Mars and Jupiter.</p>
+				<p class="margin-b-2 boom-opacity">Currently its in Earth and very few galaxies, so now its growing to Inter-Galaxies this year for availing quality eductaion all around. Space Institute of East Andromeda has developed exponentially to become a leading research institute of Planetray Technologies on Venus, Mars and Jupiter.</p>
 				<p class="boom-opacity"><a href="files/sample.pdf" download>Click to download our institue brochure!</a></p>
 			</div>
 		</div>
